<resources>
    <string name="app_name">IntelliFridge</string>
    <string name="server_ip">192.168.0.163</string>

    <!-- Barcode scanner -->
    <string name="scanner_prompt">Scan Barcode</string>
    <string name="scan_error">No Scan Data Received</string>

    <!--Navigation Drawer -->
    <string name="nav_share">Share</string>
    <string name="nav_fridges">My Fridges</string>
    <string name="nav_allergies">My Allergies</string>
    <string name="nav_input">Store Food</string>
    <string name="nav_subgroup">Misc.</string>
    <string name="nav_profile">My Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Profile Activity -->
    <string name="profile_title_name">My Profile</string>

    <!-- Menu -->
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Tabs -->
    <string-array name="MenuList">
        <item>Groceries List</item>
        <item>Allergies</item>
        <item>Fridges</item>
    </string-array>
    <string name="name_tab1">Fridges</string>
    <string name="name_tab2">Allergies</string>
    <string name="name_tab3">Grocery List</string>


    <string name="main_fragment">Main Fragment</string>


    <!-- JSON parser -->
    <string name="pdMessage">Fetching product data…</string>

    <!-- Strings related to login/register -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_Fname">First Name</string>
    <string name="hint_Lname">Last Name</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_image_descr">IntelliFridge Logo</string>
    <string name="create_account_prompt">No account yet? Create one</string>
    <string name="btn_register">Sign Up</string>
    <string name="already_regist">Already have an account? Sign in.</string>
    <string name="login_error">Invalid email or password!</string>
    <string name="register_success">Registration Successful!</string>

    <!-- Product -->
    <string name="productNameTitle">Product :</string>
    <string name="productQuantityTitle">Quantity :</string>
    <string name="title_activity_main2">Home</string>
    <string name="categoryLabel">Category</string>
    <string name="IngredientsLabel">Ingredients</string>
    <string name="BrandsLabel">Brand</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="nav_shop">Shop</string>
</resources>
